--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,9 @@ flask-wtf==0.15.1
 email-validator==1.1.3
 werkzeug==2.0.1
 flask-sqlalchemy==2.5.1
-python-dotenv==0.19.0 
+python-dotenv==0.19.0
+flask-ckeditor==0.4.6
+flask-uploads==0.2.1
+Pillow==11.2.1
+python-magic==0.4.27
+PyPDF2==3.0.1 
