--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,24 @@ flask-wtf==0.15.1
 email-validator==1.1.3
 werkzeug==2.0.1
 flask-sqlalchemy==2.5.1
-python-dotenv==0.19.0
+python-dotenv==1.0.0
 flask-ckeditor==0.4.6
 flask-uploads==0.2.1
-Pillow==11.2.1
+Pillow==9.5.0
 python-magic==0.4.27
-PyPDF2==3.0.1 
+PyPDF2==3.0.1
+fullcalendar==5.10.1
+requests==2.31.0
+python-dateutil==2.8.2
+icalendar==5.0.7
+pyjwt==2.7.0
+fpdf==1.7.2
+reportlab==3.6.12
+xlsxwriter==3.1.0
+flask-mail==0.9.1
+twilio==8.2.1
+beautifulsoup4==4.12.2
+markdown==3.4.3
+flask-socketio==5.3.4
+python-docx==0.8.11
+openpyxl==3.1.5
